--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <h4>McGivney Coding Club</h4>
 	  </div>
 	  <ul class="nav-links">
+		  <li><a href="/index.html"><h4>Home</h4></a></li>
         <li>
-			<a href="/index.html"
-			><h4>Calendar</h4></a
+			<a href="/calendar.html"
+			><h4>Meeting Dates</h4></a
+		</li>
+		<li>
+			<a href="/positions.html"><h4>Positions</h4></a>
 		</li>
 
 	  </ul>
@@ -44,7 +48,7 @@
 		.Content {
 			font-family: "Poppins", sans-serif;
 		  padding: 20px;
-		background: #b6a7db;
+		background: #d6c7c7;
 		color: Black;
 		font-size: 20px;
 		}
@@ -52,14 +56,14 @@
   
   
 	<div class="header">
-		  <h1 id="header"style="text-align:center;"><u>McGivney Coding Club - Official Website</u>
+		  <h1 id="header"style="text-align:center;"><u>McGivney Coding Club - Home Page</u>
 
 		</h1>
 	</div>	
 	<div class="Content">
 
 		<p>Welcome to the official McGivney Coding Club Website!</p>
-		<p>Here, you can find out about this club, the next meeting dates, Positions available and more</p>
+		<p>Here, you can find out about this club, the next meeting dates, positions available and more</p>
 
 	  
 
